--- a/BikeShop/BikeShop/Discussion.xaml
+++ b/BikeShop/BikeShop/Discussion.xaml
@@ -2,7 +2,10 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      
+      xmlns:data="clr-namespace:BikeShop"
+      
       xmlns:local="clr-namespace:BikeShop"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -20,8 +23,33 @@
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
-        <ListBox Grid.ColumnSpan="2" Margin="5" />
+        <ListBox Grid.ColumnSpan="2" Margin="5">
+            
+            <ListBox.ItemsSource>
+                <data:Talk />
+            </ListBox.ItemsSource>
 
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Width="300">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="chat.png" Width="20" />
+                            <TextBlock Text="{Binding Sender}" />
+                        </StackPanel>
+                        <TextBlock Text="{Binding Content}"
+                                       Margin="20,0,0,0"
+                                       TextWrapping="wrap" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            
+            
+            
+        </ListBox>
+        
+        
+        
+        
         <Button Grid.Row="1"
                 Grid.Column="1"
                 Margin="5"
